# alchemist

./: .dockerignore  .gitattributes  .gitignore  040.md  2026-04-23-073458-create-a-skill-for-interacting-with-other-ai-agen.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN_PHILOSOPHY.md  Dockerfile  Dockerfile.runtime  GEMINI.md  LICENSE  LICENSES.md  README.md  RELEASING.md  TODO.md  VERSION  alchemist.db  alchemist.sln  audit.md  backlog.md  build.rs  check_output.txt  combined_errors.xml  copilot-session-e8202b91-619f-4069-b5b1-3ee9c19f5ebc.md  docker-compose.yml  docusaurus.config.ts  entrypoint.sh  feedback.md  ideas.md  justfile  manifest.json  package-lock.json  package.json  planning.md  plans.md  security_best_practices_report.md  (+5 more)
docs/: api.md  (+20 more)
whytho/: AGENTS.md  AI_POLICY.md  Cargo.toml  LICENSE  NOTICE  README.md  Spec.md  codecs.md
whytho/codecs/: README.md
whytho/codecs/audio/: aac.md  flac.md  mp3.md  opus.md  vorbis.md
whytho/codecs/containers/: ivf.md  matroska-mkv.md  mp4-isobmff.md  webm.md
whytho/codecs/video/: av1.md  av2.md  h264-avc.md  h265-hevc.md
whytho/crates/whytho-backends/: Cargo.toml
whytho/crates/whytho-backends/src/: lib.rs
whytho/crates/whytho-cli/: Cargo.toml
whytho/crates/whytho-cli/src/: args.rs  bench.rs  doctor.rs  executor.rs  main.rs  plan.rs  probe.rs  run.rs  setup.rs  verify.rs
whytho/crates/whytho-codec-av1/: Cargo.toml
whytho/crates/whytho-codec-av1/src/: av1_encoder.rs  lib.rs
whytho/crates/whytho-codec-av1/src/av1_decoder/: block.rs  cdef.rs  cdf.rs  deblock.rs  frame_header.rs  inter.rs  intra.rs  loop_rest.rs  mod.rs  obu.rs  ref_frames.rs  sequence.rs  simple_decode.rs  symbol.rs  tile_group.rs  transform.rs
whytho/crates/whytho-codec-av2/: Cargo.toml
whytho/crates/whytho-codec-av2/src/: adapter.rs  bitstream.rs  common.rs  encoder.rs  encodetxb.rs  frame.rs  inter.rs  intra.rs  lib.rs  loopfilter.rs  partition.rs  quantize.rs  ratectrl.rs  tokenize.rs  transform.rs
whytho/crates/whytho-codec-av2/src/common/: enums.rs  image.rs
whytho/crates/whytho-codec-h264/: Cargo.toml
whytho/crates/whytho-codec-h264/proptest-regressions/h264_encoder/: transform.txt
whytho/crates/whytho-codec-h264/src/: h264_decoder.rs  lib.rs
whytho/crates/whytho-codec-h264/src/h264_encoder/: cavlc.rs  deblock.rs  dpb.rs  intra.rs  me.rs  mod.rs  nal.rs  pps.rs  quantize.rs  rate_control.rs  slice.rs  sps.rs  transform.rs
whytho/crates/whytho-codec-h264/tests/: encode_roundtrip.proptest-regressions  encode_roundtrip.rs
whytho/crates/whytho-codec-opus/: Cargo.toml
whytho/crates/whytho-codec-opus/src/: lib.rs  opus_encoder.rs
whytho/crates/whytho-codecs/: Cargo.toml
whytho/crates/whytho-codecs/src/: lib.rs
whytho/crates/whytho-conformance/: Cargo.toml
whytho/crates/whytho-conformance/tests/: conformance.rs
whytho/crates/whytho-core/: Cargo.toml
whytho/crates/whytho-core/src/: chunking.rs  config.rs  error.rs  file_ops.rs  lib.rs  media.rs  parallel.rs  pipeline.rs  presets.rs  probe.rs  quality.rs  report.rs  scheduler.rs  transcode.rs  verification.rs
whytho/crates/whytho-core/src/probe/: h264.rs  matroska.rs
whytho/crates/whytho-dsp/: Cargo.toml
whytho/crates/whytho-dsp/src/: cdef.rs  convolve.rs  cpu.rs  intrapred.rs  lib.rs  quantize.rs  transform.rs
whytho/crates/whytho-dsp/src/sad/: mod.rs  neon.rs  scalar.rs
whytho/crates/whytho-entropy/: Cargo.toml
whytho/crates/whytho-entropy/src/: cdf.rs  entenc.rs  lib.rs  writer.rs
whytho/crates/whytho-h264dec/: .gitignore  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md
whytho/crates/whytho-h264dec/examples/: bench_decode.rs  dump_frames.rs  play.rs  test_bars.rs  test_solid.rs
whytho/crates/whytho-h264dec/fuzz/: Cargo.toml  README.md
whytho/crates/whytho-h264dec/fuzz/fuzz_targets/: decode_annex_b.rs  decode_avcc.rs  parse_annex_b.rs  parse_avcc.rs  parse_avcc_config.rs
whytho/crates/whytho-h264dec/src/: bitstream.rs  cabac.rs  cabac_tables.rs  cavlc.rs  deblock.rs  decode_cabac.rs  decode_cavlc.rs  decoder.rs  dpb.rs  error.rs  inter_pred.rs  intra_pred.rs  lib.rs  mv_pred.rs  nal.rs  neighbor.rs  pps.rs  residual.rs  sei.rs  slice.rs  slice_context.rs  sps.rs
whytho/crates/whytho-h264dec/testdata/: 1080p_cavlc_test.h264  1080p_deblock_test.h264  1080p_test.h264  README.md  b_bi_test.h264  b_bi_test.yuv  b_hier_test.h264  b_hier_test.yuv  b_l0_l1_test.h264  b_l0_l1_test.yuv  b_multi_test.h264  b_multi_test.yuv  b_parts_test.h264  b_parts_test.yuv  b_skip_test.h264  b_skip_test.yuv  b_temporal_direct_test.h264  b_temporal_direct_test.yuv  b_temporal_test.h264  b_temporal_test.yuv  bench_1080p_100f_complex.h264  bench_720p_300f_bframes_complex.h264  bench_720p_300f_ponly_complex.h264  cabac_b8x8_direct_test.h264  cabac_b8x8_direct_test.yuv  cabac_b_parts_test.h264  cabac_b_parts_test.yuv  cabac_b_temporal_test.h264  cabac_b_temporal_test.yuv  cabac_b_test.h264  cabac_b_test.yuv  cabac_deblock_test.h264  cabac_deblock_test.yuv  cabac_high_test.h264  cabac_high_test.yuv  cabac_i16x16_test.h264  cabac_i4x4_test.h264  cabac_i4x4_test.yuv  cabac_i8x8_test.h264  cabac_i8x8_test.yuv  (+144 more)
whytho/crates/whytho-h264dec/testdata/fuzz_regressions/: decode_annex_b_cavlc_pos_underflow.h264  decode_annex_b_mc_output_overrun.h264  decode_annex_b_ref_pic_safe_empty.h264  decode_annex_b_rplm_pic_num_underflow.h264  (+1 more)
whytho/crates/whytho-mux/: Cargo.toml
whytho/crates/whytho-mux/src/: lib.rs  muxer.rs
whytho/crates/whytho-opus/: Cargo.toml  NOTICE  README.md
whytho/crates/whytho-opus/tests/: hybrid_48k_audio_test.rs  multi_frame_interop_test.rs
whytho/crates/whytho-rav1e/: Cargo.toml  NOTICE  README.md
whytho/crates/whytho-tables/: Cargo.toml
whytho/crates/whytho-tables/src/: lib.rs
whytho/crates/whytho-types/: Cargo.toml
whytho/crates/whytho-types/src/: lib.rs
whytho/docs/: ROADMAP.md
whytho/docs/av2/: BITSTREAM_NOTES.md  DSP_ASM.md  ENTROPY.md  REFERENCES.md  ROADMAP.md  STATUS.md  VALIDATION.md
whytho/xtask/: Cargo.toml
whytho/xtask/src/: main.rs  tablegen.rs
(+539 files in other folders)
