[package]
name = "alchemist"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0"
build = "build.rs"

[features]
default = ["embed-web"]
embed-web = []

[lib]
name = "alchemist"

[[bin]]
name = "alchemist"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
inquire = { version = "0.7" }
futures = { version = "0.3" }
toml = "0.8"
axum = { version = "0.7", features = ["macros"] }
rayon = "1.10"
tokio-stream = { version = "0.1", features = ["sync"] }
thiserror = "2.0.17"
notify = { version = "6" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2.0"
argon2 = "0.5.3"
rand = "0.9"
sysinfo = "0.32"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
trait-variant = "0.1.2"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
