[package]
name = "whytho-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "whytho"
path = "src/main.rs"

[dependencies]
whytho-core.workspace = true
whytho-codecs.workspace = true
whytho-mux.workspace = true
toml.workspace = true
serde_json.workspace = true
matroska-demuxer.workspace = true
