[package]
name = "whytho-codec-h264"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "H.264 encoder and decoder for whytho."

[dependencies]
whytho-types.workspace = true
rust_h264.workspace = true

[dev-dependencies]
proptest = "1"
