[package]
name = "whytho-h264dec"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pure Rust H.264/AVC video decoder"
repository = "https://github.com/roticv/rust_h264"
keywords = ["h264", "avc", "video", "decoder", "codec"]
categories = ["multimedia::video"]
exclude = ["testdata/", "examples/", "fuzz/", "BENCHMARK.md"]

[lib]
name = "rust_h264"

[features]
# Expose internal modules (sps, pps, slice) for debug/diagnostic examples.
dev-internals = []

[dev-dependencies]
minifb = "0.28"
